--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#2196F3</color>
+    <color name="orange">#D34E01</color>
+    <color name="hijau">#32C6D2</color>
+    <color name="abu">#DFDFDF</color>
+    <color name="merah">#FF0A08</color>
 </resources>
