- add dataLowongan.kt, MainActivityTambah.kt, MainActivityTambahLowongan.kt
- add logika MainActivityBerandaPerusahaan.kt

- Update tampilan activity_beranda_pelamar.xml, activity_beranda_perusahaan.xml, activity_detail_low_buka_pel.xml, activity_homepage.xml, activity_profil_pelamar.xml, activity_sigin_pelamar.xml, activity_sigin_perusahaan.xml, activity_sigup_pelamar.xml, activity_sigup_perusahaan.xml

- add activity_main_tambah.xml, activity_main_tambah_lowongan.xml, activity_progress.xml

- add drawable ic_cv.xml, ic_exit.xml, ic_add, ic_upload.xml

--- a/app/src/main/res/layout/activity_detail_low_buka_pel.xml
+++ b/app/src/main/res/layout/activity_detail_low_buka_pel.xml
@@ -219,7 +219,8 @@
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:layout_gravity="center"
-                        android:gravity="center"/>
+                        android:gravity="center"
+                        app:cornerRadius="7dp"/>
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
