--- a/app/src/main/res/layout/activity_beranda_pelamar.xml
+++ b/app/src/main/res/layout/activity_beranda_pelamar.xml
@@ -75,7 +75,8 @@
                         android:textAlignment="center"
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="5dp"
-                        android:textSize="12dp">
+                        android:textSize="12dp"
+                        app:cornerRadius="7dp">
                     </TextView>
 
                     <TextView
@@ -129,7 +130,9 @@
                         android:text="Lihat Detail"
                         android:textAllCaps="false"
                         android:textColor="@color/white"
-                        android:textSize="12dp"></Button>
+                        android:textSize="12dp"
+                        app:cornerRadius="7dp">
+                    </Button>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
