--- a/app/src/main/res/layout/activity_beranda_perusahaan.xml
+++ b/app/src/main/res/layout/activity_beranda_perusahaan.xml
@@ -141,7 +141,8 @@
                         android:textAllCaps="false"
                         android:onClick="btn_lihat_detail_1"
                         android:layout_marginTop="5dp"
-                        android:textColor="@color/white">
+                        android:textColor="@color/white"
+                        app:cornerRadius="7dp">
                     </Button>
                 </LinearLayout>
             </LinearLayout>
