--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -52,7 +52,8 @@
         android:textColor="@color/white"
         android:textSize="15dp"
         android:textStyle="bold"
-        android:gravity="center"/>
+        android:gravity="center"
+        app:cornerRadius="7dp"/>
 
     <Button
         android:id="@+id/btn_sigin_per_id"
@@ -66,5 +67,6 @@
         android:textAllCaps="false"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        app:cornerRadius="7dp"/>
 </LinearLayout>
