--- a/app/src/main/res/layout/activity_profil_pelamar.xml
+++ b/app/src/main/res/layout/activity_profil_pelamar.xml
@@ -39,18 +39,35 @@
                 android:orientation="vertical"
                 android:padding="15dp">
 
-                    <TextView
-                        android:id="@+id/textViewUbahDataDiri_ID"
-                        android:clickable="true"
-                        android:onClick="textViewUbahDataDiri"
-                        android:layout_width="320dp"
-                        android:layout_height="50dp"
-                        android:text="Ubah Data Diri"
-                        android:textColor="@color/black"
-                        android:textSize="15dp"
-                        android:gravity="center"
-                        android:textAlignment="inherit"
-                        android:background="@drawable/border_beranda">
+                <TextView
+                    android:id="@+id/textViewCV_ID"
+                    android:clickable="true"
+                    android:onClick="textViewUbahDataDiri"
+                    android:layout_width="320dp"
+                    android:layout_height="50dp"
+                    android:text="Curriculum Vitae"
+                    android:textColor="@color/black"
+                    android:textSize="15dp"
+                    android:gravity="left|center"
+                    android:drawableStart="@drawable/ic_cv"
+                    android:drawableTint="@color/black"
+                    android:background="@drawable/border_beranda">
+                </TextView>
+
+                <TextView
+                    android:id="@+id/textViewUbahDataDiri_ID"
+                    android:clickable="true"
+                    android:onClick="textViewUbahDataDiri"
+                    android:layout_width="320dp"
+                    android:layout_height="50dp"
+                    android:text="Ubah Data Diri"
+                    android:textColor="@color/black"
+                    android:textSize="15dp"
+                    android:gravity="left|center"
+                    android:drawableStart="@drawable/ic_profile"
+                    android:drawableTint="@color/black"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/border_beranda">
                     </TextView>
 
                 <TextView
@@ -63,8 +80,8 @@
                     android:text="Status Seleksi"
                     android:textColor="@color/black"
                     android:textSize="15dp"
-                    android:gravity="center"
-                    android:textAlignment="inherit"
+                    android:gravity="left|center"
+                    android:drawableStart="@drawable/ic_cv"
                     android:background="@drawable/border_beranda">
                 </TextView>
 
@@ -77,8 +94,8 @@
                     android:text="Keluar"
                     android:textColor="@color/black"
                     android:textSize="15dp"
-                    android:gravity="center"
-                    android:textAlignment="inherit"
+                    android:gravity="left|center"
+                    android:drawableStart="@drawable/ic_exit"
                     android:layout_marginTop="20dp"
                     android:background="@drawable/border_beranda">
                 </TextView>
