--- a/app/src/main/res/layout/activity_search_pelamar.xml
+++ b/app/src/main/res/layout/activity_search_pelamar.xml
@@ -155,7 +155,8 @@
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="12dp"
-                        android:gravity="center">
+                        android:gravity="center"
+                        app:cornerRadius="7dp">
 
                     </Button>
 
