--- a/app/src/main/res/layout/activity_sigin_pelamar.xml
+++ b/app/src/main/res/layout/activity_sigin_pelamar.xml
@@ -102,7 +102,8 @@
         android:gravity="center"
         android:textColor="@color/white"
         android:textAllCaps="false"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="30dp"
+        app:cornerRadius="7dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
