--- a/app/src/main/res/layout/activity_sigin_perusahaan.xml
+++ b/app/src/main/res/layout/activity_sigin_perusahaan.xml
@@ -98,7 +98,8 @@
         android:gravity="center"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="30dp"
+        app:cornerRadius="7dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
