--- a/app/src/main/res/layout/activity_sigup_pelamar.xml
+++ b/app/src/main/res/layout/activity_sigup_pelamar.xml
@@ -122,7 +122,8 @@
         android:backgroundTint="@color/blue"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginTop="5dp"
+        app:cornerRadius="7dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
