--- a/app/src/main/res/layout/activity_sigup_perusahaan.xml
+++ b/app/src/main/res/layout/activity_sigup_perusahaan.xml
@@ -106,7 +106,8 @@
         android:gravity="center"
         android:textColor="@color/white"
         android:textAllCaps="false"
-        android:layout_marginTop="40dp"/>
+        android:layout_marginTop="40dp"
+        app:cornerRadius="7dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
