--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -9,11 +9,12 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
+
     <ImageView
         android:id="@+id/logoscc"
-        android:layout_width="match_parent"
+        android:layout_width="320dp"
         android:layout_height="200dp"
-        android:src="@drawable/logo_scc"/>
+        android:src="@drawable/logosccpcr"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -52,8 +53,8 @@
         android:textColor="@color/white"
         android:textSize="15dp"
         android:textStyle="bold"
-        android:gravity="center"
-        app:cornerRadius="7dp"/>
+        app:cornerRadius="7dp"
+        android:gravity="center"/>
 
     <Button
         android:id="@+id/btn_sigin_per_id"
@@ -67,6 +68,6 @@
         android:textAllCaps="false"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:textColor="@color/white"
-        app:cornerRadius="7dp"/>
+        app:cornerRadius="7dp"
+        android:textColor="@color/white"/>
 </LinearLayout>
