--- a/app/src/main/res/layout/activity_sigin_pelamar.xml
+++ b/app/src/main/res/layout/activity_sigin_pelamar.xml
@@ -22,9 +22,9 @@
 
     <ImageView
         android:id="@+id/logoscc"
-        android:layout_width="match_parent"
+        android:layout_width="320dp"
         android:layout_height="200dp"
-        android:src="@drawable/logo_scc"/>
+        android:src="@drawable/logosccpcr"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -102,8 +102,8 @@
         android:gravity="center"
         android:textColor="@color/white"
         android:textAllCaps="false"
-        android:layout_marginTop="30dp"
-        app:cornerRadius="7dp"/>
+        app:cornerRadius="7dp"
+        android:layout_marginTop="30dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
