--- a/app/src/main/res/layout/activity_sigup_perusahaan.xml
+++ b/app/src/main/res/layout/activity_sigup_perusahaan.xml
@@ -21,9 +21,9 @@
 
     <ImageView
         android:id="@+id/logoscc"
-        android:layout_width="match_parent"
+        android:layout_width="320dp"
         android:layout_height="200dp"
-        android:src="@drawable/logo_scc"/>
+        android:src="@drawable/logosccpcr"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -106,8 +106,8 @@
         android:gravity="center"
         android:textColor="@color/white"
         android:textAllCaps="false"
-        android:layout_marginTop="40dp"
-        app:cornerRadius="7dp"/>
+        app:cornerRadius="7dp"
+        android:layout_marginTop="40dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
