--- a/app/src/main/res/layout/fragment_profil_perusahaan.xml
+++ b/app/src/main/res/layout/fragment_profil_perusahaan.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivityProfilPelamar">
+    tools:context=".ProfilPerusahaanFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -15,22 +15,10 @@
         android:padding="30dp"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Profil"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-
-
         <ScrollView
             android:id="@+id/scrollView2"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -40,14 +28,13 @@
                 android:padding="15dp">
 
                 <TextView
-                    android:id="@+id/textViewCV_ID"
-                    android:clickable="true"
-                    android:onClick="textViewUbahDataDiri"
+                    android:id="@+id/textViewProfil_ID"
                     android:layout_width="320dp"
-                    android:layout_height="50dp"
-                    android:text="Curriculum Vitae"
+                    android:layout_height="100dp"
+                    android:text="PT. Sumatera Dinamika Utama"
                     android:textColor="@color/black"
                     android:textSize="15dp"
+                    android:textStyle="bold"
                     android:gravity="left|center"
                     android:drawableStart="@drawable/ic_cv"
                     android:drawableTint="@color/black"
@@ -57,7 +44,7 @@
                 <TextView
                     android:id="@+id/textViewUbahDataDiri_ID"
                     android:clickable="true"
-                    android:onClick="textViewUbahDataDiri"
+                    android:onClick="textViewUbahDataDiriPer"
                     android:layout_width="320dp"
                     android:layout_height="50dp"
                     android:text="Ubah Data Diri"
@@ -66,36 +53,23 @@
                     android:gravity="left|center"
                     android:drawableStart="@drawable/ic_profile"
                     android:drawableTint="@color/black"
+                    android:drawablePadding="10dp"
                     android:layout_marginTop="20dp"
-                    android:background="@drawable/border_beranda">
-                    </TextView>
-
-                <TextView
-                    android:id="@+id/textViewStatusSeleksi_ID"
-                    android:clickable="true"
-                    android:onClick="textViewStatusSeleksi"
-                    android:layout_width="320dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_height="50dp"
-                    android:text="Status Seleksi"
-                    android:textColor="@color/black"
-                    android:textSize="15dp"
-                    android:gravity="left|center"
-                    android:drawableStart="@drawable/ic_cv"
                     android:background="@drawable/border_beranda">
                 </TextView>
 
                 <TextView
-                    android:id="@+id/textViewKeluar_ID"
+                    android:id="@+id/textViewKeluarPer_ID"
                     android:clickable="true"
-                    android:onClick="textViewKeluar"
+                    android:onClick="textViewKeluarPer"
                     android:layout_width="320dp"
                     android:layout_height="50dp"
-                    android:text="Keluar"
+                    android:text="Keluar Dari Akun"
                     android:textColor="@color/black"
                     android:textSize="15dp"
                     android:gravity="left|center"
                     android:drawableStart="@drawable/ic_exit"
+                    android:drawablePadding="10dp"
                     android:layout_marginTop="20dp"
                     android:background="@drawable/border_beranda">
                 </TextView>
@@ -105,26 +79,6 @@
         </ScrollView>
 
     </LinearLayout>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        app:menu="@menu/bottom_nav"
-        app:itemIconTint="@color/orange"
-        app:itemTextColor="@color/orange"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:background="@color/abu"/>
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
-
-
-
 
 
 
