--- a/app/src/main/res/layout/low_card_layout_pelamar.xml
+++ b/app/src/main/res/layout/low_card_layout_pelamar.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardViewLowPelamar"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".MainActivityBerandaPelamar">
-
-    <!-- TODO: Update blank fragment layout -->
-
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="8dp"
+    app:cardCornerRadius="8dp"
+    android:elevation="8dp">
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -26,7 +24,7 @@
             android:padding="15dp">
 
             <ImageView
-                android:id="@+id/low1_gambar_beranda"
+                android:id="@+id/imageViewLowPelamar"
                 android:layout_width="120dp"
                 android:layout_height="150dp"
                 android:layout_marginTop="0dp"
@@ -39,10 +37,10 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView_ss"
+                    android:id="@+id/textViewNamaInstansiLow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Sekolah Tinggi Ilmu Farmasi Riau"
+                    android:text="Nama Instansi"
                     android:textColor="@color/black"
                     android:textSize="12dp"
                     android:layout_marginLeft="10dp"
@@ -50,10 +48,10 @@
                 </TextView>
 
                 <TextView
-                    android:id="@+id/textView_ss1"
+                    android:id="@+id/textViewNamaPosisiLow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Web Programmer"
+                    android:text="Nama Posisi"
                     android:textColor="@color/black"
                     android:textSize="12dp"
                     android:layout_marginLeft="10dp"
@@ -65,22 +63,21 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <TextView
-                        android:id="@+id/beranda_buka"
+                        android:id="@+id/textViewNamaStatusLow"
                         android:layout_width="80dp"
                         android:layout_height="20dp"
-                        android:text="Buka"
+                        android:text="Status"
                         android:background="@drawable/biru"
                         android:textStyle="bold"
                         android:textColor="@color/white"
                         android:textAlignment="center"
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="5dp"
-                        android:textSize="12dp"
-                        app:cornerRadius="7dp">
+                        android:textSize="12dp">
                     </TextView>
 
                     <TextView
-                        android:id="@+id/beranda_total"
+                        android:id="@+id/textViewJumlahLow"
                         android:layout_width="80dp"
                         android:layout_height="20dp"
                         android:text="    7"
@@ -111,7 +108,7 @@
                     </TextView>
 
                     <TextView
-                        android:id="@+id/tgl_beranda"
+                        android:id="@+id/textViewDurasiLow"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="13 November 2023 - 17 November 2023"
@@ -121,6 +118,7 @@
                     </TextView>
 
                     <Button
+                        android:id="@+id/buttonLihatDetailPelamar"
                         android:layout_width="match_parent"
                         android:layout_height="34dp"
                         android:layout_marginLeft="10dp"
@@ -131,18 +129,11 @@
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="12dp"
-                        app:cornerRadius="7dp">
-                    </Button>
+                        app:cornerRadius="7dp"></Button>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
+</androidx.cardview.widget.CardView>
