--- a/app/src/main/res/layout/activity_beranda_pelamar.xml
+++ b/app/src/main/res/layout/activity_beranda_pelamar.xml
@@ -1,148 +1,89 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<!-- res/layout/fragment_home.xml -->
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".MainActivityBerandaPelamar">
+    android:background="@android:color/white"
+    tools:context=".MainActivityBerandaPelamar"
+    tools:openDrawer="start">
 
-    <!-- TODO: Update blank fragment layout -->
-
-
-    <ScrollView
-        android:id="@+id/scrollView2"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="30dp">
+        android:layout_height="wrap_content">
 
-        <LinearLayout
+        <!-- Top controls -->
+        <RelativeLayout
+            android:id="@+id/topControlsLayout"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/orange"
+            android:elevation="999dp"
+            android:gravity="bottom"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="10dp">
+
+
+            <EditText
+                android:id="@+id/EditTextSearch"
+                android:layout_width="350dp"
+                android:layout_height="40dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="12dp"
+                android:hint="Cari lowongan pekerjaan"
+                android:gravity="center_vertical"
+                android:textSize="14sp"
+                android:textColorHint="@color/abu"
+                android:textColor="#000000"
+                android:paddingStart="12dp"
+                android:inputType="text|textCapSentences|textCapWords"
+                android:imeOptions="actionSearch"
+                android:paddingEnd="10dp"
+                android:background="@drawable/putih"
+                android:drawableEnd="@drawable/ic_search"/>
+
+
+            <!-- Your existing top controls views -->
+
+        </RelativeLayout>
+
+        <FrameLayout
+            android:id="@+id/frame_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <!-- RecyclerView -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewPel"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/topControlsLayout"
+            android:layout_above="@id/bottomNavigationViewPel"
+            android:layout_marginTop="5dp"
+            android:padding="16dp"
+            android:clipToPadding="false" />
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigationViewPel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/border_beranda"
-            android:orientation="horizontal"
-            android:padding="15dp">
+            android:background="@color/white"
+            app:itemTextColor="@color/orange"
+            app:itemIconTint="@color/orange"
+            android:layout_alignParentBottom="true"
+            app:menu="@menu/bottom_nav_pel">
 
-            <ImageView
-                android:id="@+id/low1_gambar_beranda"
-                android:layout_width="120dp"
-                android:layout_height="150dp"
-                android:layout_marginTop="0dp"
-                android:src="@drawable/low2">
-            </ImageView>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:background="@color/abu"/>
+        </com.google.android.material.bottomnavigation.BottomNavigationView>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textView_ss"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Sekolah Tinggi Ilmu Farmasi Riau"
-                    android:textColor="@color/black"
-                    android:textSize="12dp"
-                    android:layout_marginLeft="10dp"
-                    android:textStyle="bold">
-                </TextView>
-
-                <TextView
-                    android:id="@+id/textView_ss1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Web Programmer"
-                    android:textColor="@color/black"
-                    android:textSize="12dp"
-                    android:layout_marginLeft="10dp"
-                    android:textStyle="bold">
-                </TextView>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:id="@+id/beranda_buka"
-                        android:layout_width="80dp"
-                        android:layout_height="20dp"
-                        android:text="Buka"
-                        android:background="@drawable/biru"
-                        android:textStyle="bold"
-                        android:textColor="@color/white"
-                        android:textAlignment="center"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:textSize="12dp"
-                        app:cornerRadius="7dp">
-                    </TextView>
-
-                    <TextView
-                        android:id="@+id/beranda_total"
-                        android:layout_width="80dp"
-                        android:layout_height="20dp"
-                        android:text="    7"
-                        android:textSize="12dp"
-                        android:background="@drawable/hijau"
-                        android:textStyle="bold"
-                        android:textColor="@color/white"
-                        android:drawableStart="@drawable/ic_profile"
-                        android:drawableTint="@color/white"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp">
-                    </TextView>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Tanggal Buka:"
-                        android:textSize="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
-                        android:textColor="@color/black">
-                    </TextView>
-
-                    <TextView
-                        android:id="@+id/tgl_beranda"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="13 November 2023 - 17 November 2023"
-                        android:textSize="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:textColor="@color/black">
-                    </TextView>
-
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="34dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:backgroundTint="@color/orange"
-                        android:onClick="btn_lihat_detail_pel_1"
-                        android:text="Lihat Detail"
-                        android:textAllCaps="false"
-                        android:textColor="@color/white"
-                        android:textSize="12dp"
-                        app:cornerRadius="7dp">
-                    </Button>
-                </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+    </RelativeLayout>
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
+</androidx.drawerlayout.widget.DrawerLayout>
