--- a/app/src/main/res/layout/activity_detail_low_pelamar.xml
+++ b/app/src/main/res/layout/activity_detail_low_pelamar.xml
@@ -39,7 +39,6 @@
 
 
         <ScrollView
-            android:id="@+id/scrollView2"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -127,8 +126,8 @@
                         android:id="@+id/textViewJudulStatusLowDetail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Total Panggilan"
-                        android:textColor="@color/merah"
+                        android:text="Status Lowongan"
+                        android:textColor="@color/orange"
                         android:textStyle="bold"
                         android:textSize="15dp"
                         android:layout_marginTop="15dp">
@@ -138,9 +137,9 @@
                         android:id="@+id/textViewStatusLowDetail"
                         android:layout_width="100dp"
                         android:layout_height="30dp"
-                        android:text="Buka"
-                        android:textColor="@color/merah"
-                        android:background="@drawable/border_merah"
+                        android:text="Status"
+                        android:textColor="@color/orange"
+                        android:background="@drawable/border_orange"
                         android:textSize="15dp"
                         android:textAlignment="center"
                         android:layout_marginTop="10dp">
@@ -153,6 +152,16 @@
                         android:layout_marginTop="20dp"
                         android:src="@drawable/low2">
                     </ImageView>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Penjelasan Detail Lowongan :"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:textSize="15dp"
+                        android:layout_marginTop="15dp">
+                    </TextView>
 
                     <TextView
                         android:id="@+id/textViewPenjelasanLowDetail"
