--- a/app/src/main/res/layout/activity_sigup_pelamar.xml
+++ b/app/src/main/res/layout/activity_sigup_pelamar.xml
@@ -9,146 +9,162 @@
     tools:context=".MainActivitySigupPelamar"
     android:orientation="vertical">
 
-    <TextView
-        android:clickable="true"
-        android:onClick="btn_kembali_signin_pel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="13dp"
-        android:text="Kembali"
-        android:textAlignment="inherit"
-        android:textColor="@color/orange" />
-
-    <ImageView
-        android:id="@+id/logoscc"
-        android:layout_width="320dp"
-        android:layout_height="200dp"
-        android:src="@drawable/logosccpcr"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="25dp"
-        android:text="Daftar Sekarang"
-        android:layout_marginTop="10dp"
-        android:textAlignment="center"
-        android:textColor="@color/black" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="5dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputNamaPelamar"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:hint="Masukkan Nama"
-            android:textSize="15dp"
-            android:inputType="textPersonName"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="2dp"
-        android:textSize="15dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputEmailPelamar"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:textSize="15dp"
-            android:hint="Masukkan Email"
-            android:inputType="textEmailAddress"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="2dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputPassPelamar"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:hint="Masukkan Kata Sandi"
-            android:textSize="15dp"
-            android:inputType="textPassword"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="2dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputKonfPassPelamar"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:hint="Verifikasi Kata Sandi"
-            android:textSize="15dp"
-            android:inputType="textPassword"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="2dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputHpPelamar"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:hint="Nomor Telepon"
-            android:textSize="15dp"
-            android:inputType="textPhonetic"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <Button
-        android:id="@+id/btnregispel"
-        android:onClick="btn_masuk_login_pel"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="15dp"
-        android:text="Daftar"
-        android:backgroundTint="@color/blue"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        app:cornerRadius="7dp"
-        android:layout_marginTop="5dp"/>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="5dp"
-        android:gravity="center">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="13dp"
-            android:text="Sudah punya akun ?"
-            android:textAlignment="center"
-            android:textColor="@color/black"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
             android:clickable="true"
-            android:onClick="btn_masuk_lagi_pel"
-            android:layout_width="wrap_content"
+            android:onClick="btn_kembali_signin_pel"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="13dp"
-            android:text=" Masuk"
-            android:textAlignment="center"
-            android:textColor="@color/orange"/>
-    </LinearLayout>
+            android:text="Kembali"
+            android:textAlignment="inherit"
+            android:textColor="@color/orange" />
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/logoscc"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:src="@drawable/logosccpcr"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="25dp"
+                    android:text="Daftar Sekarang"
+                    android:layout_marginTop="10dp"
+                    android:textAlignment="center"
+                    android:textColor="@color/black" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="5dp"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/inputNamaPelamar"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:hint="Masukkan Nama"
+                        android:textSize="15dp"
+                        android:inputType="textPersonName"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="2dp"
+                    android:textSize="15dp"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/inputEmailPelamar"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:textSize="15dp"
+                        android:hint="Masukkan Email"
+                        android:inputType="textEmailAddress"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="2dp"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/inputPassPelamar"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:hint="Masukkan Kata Sandi"
+                        android:textSize="15dp"
+                        android:inputType="textPassword"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="2dp"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/inputKonfPassPelamar"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:hint="Verifikasi Kata Sandi"
+                        android:textSize="15dp"
+                        android:inputType="textPassword"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="2dp"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/inputHpPelamar"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:hint="Nomor Telepon"
+                        android:textSize="15dp"
+                        android:inputType="textPhonetic"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <Button
+                    android:id="@+id/btnregispel"
+                    android:onClick="btn_masuk_login_pel"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:textSize="15dp"
+                    android:text="Daftar"
+                    android:backgroundTint="@color/blue"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    app:cornerRadius="7dp"
+                    android:layout_marginTop="5dp"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="13dp"
+                        android:text="Sudah punya akun ?"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"/>
+
+                    <TextView
+                        android:clickable="true"
+                        android:onClick="btn_masuk_lagi_pel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="13dp"
+                        android:text=" Masuk"
+                        android:textAlignment="center"
+                        android:textColor="@color/orange"/>
+                </LinearLayout>
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
 </LinearLayout>
