--- a/app/src/main/res/layout/low_card_layout_pelamar.xml
+++ b/app/src/main/res/layout/low_card_layout_pelamar.xml
@@ -9,131 +9,127 @@
     app:cardCornerRadius="8dp"
     android:elevation="8dp">
 
-    <ScrollView
-        android:id="@+id/scrollView2"
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="30dp">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="5dp">
+
+        <ImageView
+            android:id="@+id/imageViewLowPelamar"
+            android:layout_width="120dp"
+            android:layout_height="130dp"
+            android:layout_margin="5dp"
+            android:src="@drawable/low2">
+        </ImageView>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/border_beranda"
-            android:orientation="horizontal"
-            android:padding="15dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/imageViewLowPelamar"
-                android:layout_width="120dp"
-                android:layout_height="150dp"
-                android:layout_marginTop="0dp"
-                android:src="@drawable/low2">
-            </ImageView>
+            <TextView
+                android:id="@+id/textViewNamaInstansiLow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:text="Nama Instansi"
+                android:textColor="@color/black"
+                android:textSize="12dp"
+                android:textStyle="bold"></TextView>
+
+            <TextView
+                android:id="@+id/textViewNamaPosisiLow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nama Posisi"
+                android:textColor="@color/black"
+                android:textSize="12dp"
+                android:layout_marginLeft="10dp"
+                android:textStyle="bold">
+            </TextView>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/textViewStatusLow"
+                    android:layout_width="80dp"
+                    android:layout_height="20dp"
+                    android:text="Status"
+                    android:background="@drawable/biru"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textAlignment="center"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:textSize="12dp">
+                </TextView>
+
+                <TextView
+                    android:id="@+id/textViewJumlahLow"
+                    android:layout_width="50dp"
+                    android:layout_height="20dp"
+                    android:text="7"
+                    android:textSize="12dp"
+                    android:background="@drawable/hijau"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:drawableStart="@drawable/ic_profile"
+                    android:drawableTint="@color/white"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="5dp">
+                </TextView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textViewNamaInstansiLow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Nama Instansi"
-                    android:textColor="@color/black"
-                    android:textSize="12dp"
+                    android:text="Tanggal Buka:"
+                    android:textSize="10dp"
                     android:layout_marginLeft="10dp"
-                    android:textStyle="bold">
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/black">
                 </TextView>
 
                 <TextView
-                    android:id="@+id/textViewNamaPosisiLow"
+                    android:id="@+id/textViewDurasiLow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Nama Posisi"
-                    android:textColor="@color/black"
-                    android:textSize="12dp"
+                    android:text="13 November 2023 - 17 November 2023"
+                    android:textSize="10dp"
                     android:layout_marginLeft="10dp"
-                    android:textStyle="bold">
+                    android:textColor="@color/black">
                 </TextView>
 
-                <LinearLayout
+                <Button
+                    android:id="@+id/buttonLihatDetailPelamar"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:id="@+id/textViewNamaStatusLow"
-                        android:layout_width="80dp"
-                        android:layout_height="20dp"
-                        android:text="Status"
-                        android:background="@drawable/biru"
-                        android:textStyle="bold"
-                        android:textColor="@color/white"
-                        android:textAlignment="center"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:textSize="12dp">
-                    </TextView>
-
-                    <TextView
-                        android:id="@+id/textViewJumlahLow"
-                        android:layout_width="80dp"
-                        android:layout_height="20dp"
-                        android:text="    7"
-                        android:textSize="12dp"
-                        android:background="@drawable/hijau"
-                        android:textStyle="bold"
-                        android:textColor="@color/white"
-                        android:drawableStart="@drawable/ic_profile"
-                        android:drawableTint="@color/white"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginTop="5dp">
-                    </TextView>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Tanggal Buka:"
-                        android:textSize="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
-                        android:textColor="@color/black">
-                    </TextView>
-
-                    <TextView
-                        android:id="@+id/textViewDurasiLow"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="13 November 2023 - 17 November 2023"
-                        android:textSize="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:textColor="@color/black">
-                    </TextView>
-
-                    <Button
-                        android:id="@+id/buttonLihatDetailPelamar"
-                        android:layout_width="match_parent"
-                        android:layout_height="34dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="5dp"
-                        android:backgroundTint="@color/orange"
-                        android:onClick="btn_lihat_detail_pel_1"
-                        android:text="Lihat Detail"
-                        android:textAllCaps="false"
-                        android:textColor="@color/white"
-                        android:textSize="12dp"
-                        app:cornerRadius="7dp"></Button>
-                </LinearLayout>
+                    android:layout_height="34dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:backgroundTint="@color/orange"
+                    android:onClick="btn_lihat_detail_pel_1"
+                    android:text="Lihat Detail"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:textSize="12dp"
+                    app:cornerRadius="7dp"
+                    android:layout_marginRight="5dp">
+                </Button>
             </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
+
 
 
 </androidx.cardview.widget.CardView>
