--- a/app/src/main/res/layout/activity_profil_perusahaan.xml
+++ b/app/src/main/res/layout/activity_profil_perusahaan.xml
@@ -29,12 +29,12 @@
                 android:background="@drawable/border_beranda">
 
                 <ImageView
-                    android:id="@+id/ubahFotoProfilePerusahaan"
+                    android:id="@+id/LogoPerProfil"
                     android:layout_width="120dp"
                     android:layout_height="150dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginLeft="5dp"
-                    android:src="@drawable/logopertamina">
+                    android:src="@drawable/logo_scc">
                 </ImageView>
 
                 <LinearLayout
@@ -57,7 +57,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Lihat Data Perusahaan Anda"
+                        android:text="Lihat Profil Perusahaan"
                         android:textColor="@color/orange"
                         android:textSize="14dp"
                         android:textStyle="bold"
