--- a/app/src/main/res/layout/activity_sigup_perusahaan.xml
+++ b/app/src/main/res/layout/activity_sigup_perusahaan.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:padding="30dp"
     tools:context=".MainActivitySigupPerusahaan"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <LinearLayout
@@ -108,6 +109,37 @@
                         android:hint="Verifikasi Kata Sandi"
                         android:inputType="textPassword"/>
                 </com.google.android.material.textfield.TextInputLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Logo Perusahaan"
+                    android:textSize="15sp"
+                    android:layout_marginTop="5dp"
+                    android:textAlignment="inherit"
+                    android:textColor="@color/black">
+                </TextView>
+
+                <ImageView
+                    android:id="@+id/uploadLogo"
+                    android:layout_width="200dp"
+                    android:layout_height="150dp"
+                    android:src="@drawable/ic_upload"
+                    android:layout_marginTop="10dp"
+                    android:backgroundTint="@color/hijau"
+                    android:layout_gravity="center_horizontal">
+                </ImageView>
+
+                <Button
+                    android:id="@+id/uploadLogoPer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Upload Logo"
+                    android:textSize="15sp"
+                    android:textColor="@color/orange"
+                    android:layout_gravity="center_horizontal"
+                    android:backgroundTint="@color/white">
+                </Button>
 
                 <Button
                     android:id="@+id/btnregisper"
